Additionnal fix for bug 157531. Remove the top bar resizing issue : now, instead of having a disappearing line edit (and a lot of resizes because of this), we use setEnabled(true/false) on the line edit. It means much improved performances, no more bad looking resizes/repaints... Only good things.

BUG: 157531


svn path=/trunk/KDE/kdegames/konquest/; revision=772948